# Arc

./: .editorconfig  .gitignore  .npmrc  AGENTS.md  API_REFERENCE.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  FAQ_AND_TROUBLESHOOTING.md  FEATURES.md  GLOSSARY.md  INSTALLATION.md  MCP_INTEGRATION.md  PLANNED_FEATURES.md  README.md  SECURITY.md  package.json  pnpm-lock.yaml  tsconfig.base.json
.claude/: settings.json
apps/desktop/: Cargo.toml  package.json  tauri.conf.json
apps/desktop/capabilities/: default.json
apps/desktop/icons/: icon.icns
apps/desktop/src/: main.rs
apps/desktop/src/commands/: agent.rs  apiclient.rs  fonts.rs  fs.rs  git.rs  git_host.rs  http.rs  llm.rs  lsp.rs  mcp.rs  memory.rs  mod.rs  network.rs  project_config.rs  pty.rs  secrets.rs  session.rs  ssh.rs  system.rs  usage.rs  window.rs
apps/frontend/: index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
apps/frontend/src/: App.tsx  index.css  main.tsx
apps/frontend/src/components/: AgentEditorPage.tsx  AgentsView.tsx  ApiClient.tsx  AskAiFloater.tsx  BlocksDrawer.tsx  BranchPicker.tsx  ChatPanel.tsx  CommandHistoryPalette.tsx  CommandPalette.tsx  DiffView.tsx  DropZoneOverlay.tsx  Editor.tsx  FileTree.tsx  FontPicker.tsx  GitPage.tsx  InlineEditPanel.tsx  ModelPicker.tsx  NewTabSplash.tsx  OutlineView.tsx  PaneLeafView.tsx  PaneTabStrip.tsx  PaneTreeView.tsx  PasteWarning.tsx  Preview.tsx  ProcessContextMenu.tsx  ProviderIcon.tsx  ResizeHandle.tsx  SearchPalette.tsx  SearchView.tsx  SettingsDialog.tsx  SettingsPage.tsx  ShortcutsDialog.tsx  Sidebar.tsx  SourceControl.tsx  StatusBar.tsx  SystemMonitor.tsx  SystemMonitorButton.tsx  TabBar.tsx  TabContextMenu.tsx  TabGroupMenu.tsx  (+2 more)
apps/frontend/src/components/chat/: AgentsView.tsx  SessionsView.tsx
apps/frontend/src/components/git/: AuthorsSidebar.tsx  CherryPickDialog.tsx  CommitGraph.tsx  CommitList.tsx  FilterBar.tsx  PrPanel.tsx  RebasePanel.tsx  WorktreePanel.tsx
apps/frontend/src/components/ssh/: GenerateKeyDialog.tsx  HostDetail.tsx  HostEditDialog.tsx  ImportKeyDialog.tsx  SshConnectingOverlay.tsx  SshErrorCard.tsx  SshPanel.tsx  SshSessionLogDrawer.tsx  SshTab.tsx  common.ts
apps/frontend/src/lib/: fileIcons.ts  format.ts  framework.ts  git-graph.ts  inlineEdit.ts  links.ts  lspClient.ts  lspServers.ts  notify.ts  outline.ts  sidebarViews.ts  tabGroups.ts  tauri.ts  themeMarketplace.ts  usage.ts
apps/frontend/src/lib/__tests__/: inlineEdit.test.ts  lspClient.test.ts  lspServers.test.ts  outline.test.ts  sidebarViews.test.ts  usage.test.ts
apps/frontend/src/state/: agents.ts  blocks.ts  chat.ts  commands.ts  files.ts  git.ts  gitUi.ts  models.ts  paste.ts  projectConfig.ts  providers.ts  reveal.ts  selection.ts  settings.ts  shortcuts.ts  sidebarLayout.ts  ssh.ts  workspace.ts
apps/frontend/src/state/__tests__/: files.test.ts
apps/frontend/src/themes/: index.ts
docs/: architecture.md  decisions.md  mvp-spec.md  roadmap.md
rust/agent-runtime/: Cargo.toml  README.md
rust/agent-runtime/src/: lib.rs  tools.rs
rust/ai-runtime/: Cargo.toml  README.md
rust/ai-runtime/src/: embed.rs  lib.rs  usage.rs
rust/ai-runtime/src/providers/: anthropic.rs  local_cli.rs  mod.rs  ollama.rs  openai.rs
rust/filesystem/: Cargo.toml  README.md
rust/filesystem/src/: dialog.rs  dir.rs  file.rs  index.rs  lib.rs  listing.rs  paths.rs  search.rs  watch.rs
rust/git/: Cargo.toml  README.md
rust/git-host/: Cargo.toml
rust/git-host/src/: lib.rs
rust/git/src/: lib.rs
rust/http-client/: Cargo.toml
rust/http-client/src/: lib.rs
rust/lsp/: Cargo.toml
rust/lsp/src/: lib.rs
rust/project-config/: Cargo.toml
rust/project-config/src/: lib.rs
rust/pty/: Cargo.toml  README.md
rust/pty/src/: lib.rs
rust/session-manager/: Cargo.toml  README.md
rust/session-manager/migrations/: 0001_initial.sql  0002_chat_sessions.sql  0003_memory.sql  0004_memory_embedding_meta.sql  0005_settings.sql  0006_pane_layout.sql  0007_preview_tabs.sql  0008_apiclient.sql  0009_sysmonitor.sql  0010_ssh.sql  0011_diff_tabs.sql  0012_chat_workspace_set_null.sql  0013_agent_worktree.sql
rust/session-manager/src/: agent.rs  apiclient.rs  chat.rs  commands.rs  lib.rs  memory.rs  settings.rs  ssh.rs  tabs.rs  workspaces.rs
rust/ssh/: Cargo.toml
rust/ssh/src/: lib.rs
rust/system-monitor/: Cargo.toml
rust/system-monitor/src/: lib.rs
