[workspace]
resolver = "2"
members = [
    "apps/desktop",
    "rust/pty",
    "rust/session-manager",
    "rust/agent-runtime",
    "rust/ai-runtime",
    "rust/filesystem",
    "rust/git",
    "rust/http-client",
    "rust/system-monitor",
    "rust/ssh",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.80"
license = "MIT"
authors = ["ARC contributors"]

[workspace.dependencies]
# Async
tokio = { version = "1.40", features = ["full"] }
futures = "0.3"

# Errors / logging
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Filesystem / IDs
uuid = { version = "1.10", features = ["v4", "serde"] }
parking_lot = "0.12"
dashmap = "6"

# Terminal
portable-pty = "0.9"
bytes = "1.7"

# SSH client (pure-Rust) + key generation. russh handles the wire protocol;
# ssh-key gives us a stable API for generating + serialising OpenSSH keys.
russh = "0.45"
russh-keys = "0.45"
ssh-key = { version = "0.6", features = ["ed25519", "rsa", "encryption"] }
rand_core = { version = "0.6", features = ["std"] }
base64 = "0.22"

# Native file dialogs
rfd = "0.15"

# Open URLs / paths in the user's default handler (system browser, file manager, …)
open = "5"

# Filesystem watcher + walker
notify = "6"
walkdir = "2"

# Full-text indexing — used by `arc-filesystem::index` to back fs_search.
tantivy = { version = "0.22", default-features = false, features = ["mmap", "stopwords"] }
sha2 = "0.10"

# OS credential vault (Keychain / Credential Manager / Secret Service).
# `apple-native` and `windows-native` use built-in OS APIs with no extra
# system deps; on Linux `sync-secret-service` shells out to libsecret.
keyring = { version = "3", default-features = false, features = ["apple-native", "windows-native", "sync-secret-service"] }

# HTTP / streaming
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures-util = "0.3"
async-trait = "0.1"
eventsource-stream = "0.2"

# Persistence
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "macros", "migrate", "chrono"] }
# Force the bundled libsqlite3 so the binary doesn't need system sqlite on Windows.
libsqlite3-sys = { version = "0.30", features = ["bundled"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
dirs = "5"

# Tauri (workspace-pinned for app crate)
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
tauri-plugin-autostart = "2"
tauri-plugin-window-state = "2"

# Internal crates
arc-pty = { path = "rust/pty" }
arc-session-manager = { path = "rust/session-manager" }
arc-agent-runtime = { path = "rust/agent-runtime" }
arc-ai-runtime = { path = "rust/ai-runtime" }
arc-filesystem = { path = "rust/filesystem" }
arc-git = { path = "rust/git" }
arc-http-client = { path = "rust/http-client" }
arc-system-monitor = { path = "rust/system-monitor" }
arc-ssh = { path = "rust/ssh" }

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
