[package]
name = "arc-agent-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "rt", "macros", "process", "time", "io-util"] }
tracing.workspace = true
uuid.workspace = true
async-trait.workspace = true
reqwest.workspace = true
arc-filesystem = { workspace = true }
