[package]
name = "arc-filesystem"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs", "sync", "rt"] }
tracing.workspace = true
dirs.workspace = true
rfd.workspace = true
notify.workspace = true
