[package]
name = "arc-session-manager"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "fs"] }
tracing.workspace = true
uuid.workspace = true
sqlx.workspace = true
# Pulled in transitively by sqlx, but kept here so the `bundled` feature
# survives any future workspace dep reshuffling.
libsqlite3-sys.workspace = true
chrono.workspace = true
dirs.workspace = true
