[package]
name = "arc-system-monitor"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
serde.workspace = true
thiserror.workspace = true
parking_lot.workspace = true
sysinfo = "0.30"
